fix: dark mode styles

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -86,7 +86,8 @@ button:focus {
 
 // dark mode
 .dark {
-  html, body, #app {
+  background: @color-background-dark;
+  body, #app {
     background: @color-background-dark;
   }
   body::-webkit-scrollbar-thumb {
